--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="~{fragments :: head}">
+<!--  <link href=".../css/techjobs.css" th:href="@{/css/techjobs.css}" rel="stylesheet">-->
+  <link href="@{/css/techjobs.css}" rel="stylesheet" />
 </head>
 <body>
 
@@ -11,6 +13,36 @@
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
+<!--    <th:block th:fragment="jobLoop">-->
+  <table th:fragment="jobLoop" th:each="job : ${jobs}" class="job-listing">
+<!--    <th:block th:each="job : ${jobs}">-->
+        <tr>
+        <th>ID: </th>
+        <td th:text="${job.id}"></td>
+            </tr>
+        <tr>
+        <th>Name: </th>
+        <td th:text="${job.name}"></td>
+            </tr>
+        <tr>
+        <th>Employer: </th>
+        <td th:text="${job.employer}"></td>
+            </tr>
+        <tr>
+        <th>Location: </th>
+        <td th:text="${job.location}"></td>
+        </tr>
+        <tr>
+        <th>Position Type: </th>
+        <td th:text="${job.positionType}"></td>
+        </tr>
+        <tr>
+        <th>Core Competency: </th>
+        <td th:text="${job.coreCompetency}"></td>
+            </tr>
+<!--    </th:block>-->
+  </table>
+<!--    </th:block>-->
 
 </div>
 
